# AgentStudio

./: README.md  main.py  pyproject.toml
agentstudio/: __init__.py  api.py  catalog.py  cli.py  config.py  persistence.py  runtime.py
agentstudio/domain/: __init__.py  models.py
agentstudio/services/: __init__.py  agents.py  runs.py  schedules.py  settings.py  worker.py
frontend/: package-lock.json  package.json  tsconfig.app.tsbuildinfo
frontend/src/: App.test.tsx  App.tsx  api.ts  main.tsx  styles.css  types.ts
skills/writer/: SKILL.md
tests/api/: test_app.py
tests/catalog/: test_scanners.py
tests/runtime/: test_compiler.py
tests/services/: test_agent_versioning.py  test_runs.py  test_schedules.py  test_settings.py
tools/: echo_tool.py
